# belgrade-os

./: .env.example  .gitignore  CLAUDE.md  GEMINI.md  Makefile  README.md  docker-compose.yml  identity.json  mypy.ini  setup.sh  test-fire.py
apps/demo_app/: README.md  main.py  manifest.json
apps/nutrition/: models.py
apps/shopping/: main.py
apps/system-health/: main.py
bridge/: Cargo.toml  build.rs
bridge/src/: config.rs  lib.rs  main.rs  registry.rs  router.rs  store.rs
core/: auth.py  config.py  context.py  eventbus.py  events.py  executor.py  io.py  loader.py  main.py  mcp.py
core/models/: manifest.py  user.py
docs/: main.spec.md  tech.spec.md
gateway/: auth.go  auth_test.go  config.go  config_test.go  go.mod  go.sum  handler.go  handler_test.go  main.go  main_test.go  redis.go  redis_test.go  stream.go  stream_test.go
gateway/auth/: auth.go  auth_test.go  test_utils.go
gateway/redis/: redis.go  redis_test.go
gateway/ui/: handler.go  (+2 more)
inference/: .env.example  config.py  main.py  redis_client.py  requirements.txt  worker.py
notification/: config.py  main.py  redis_client.py  requirements.txt  worker.py
platform_controller/: main.py  pytest.ini  redis_client.py  scheduler.py
proto/: belgrade_os.proto
runner/: bridge_client.py  config.py  main.py  redis_client.py  requirements-dev.txt  requirements.txt  worker.py
scripts/: seed_permissions.py
sdk/: requirements.txt
shared/: database.py  ntfy.py
tests/: conftest.py
vault_service/: main.py  pytest.ini  redis_client.py  requirements-dev.txt  requirements.txt  worker.py
(+56 files in other folders)
