[package]
name = "bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prost = "0.12"

[build-dependencies]
prost-build = "0.12"

[dev-dependencies]
wiremock = "0.6"
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
